third_party/move/move-compiler-v2/tests/more-v1/parser/invalid_call_lhs_parens_around_name2.exp

Diagnostics:
error: undeclared `foo`
  ┌─ tests/more-v1/parser/invalid_call_lhs_parens_around_name2.move:3:10
  │
3 │         (foo)()
  │          ^^^
